# py-manage-nginx

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/py-manage-nginx/: hosting.py  manager.py
src/py_manage_nginx/: hosting.py  manager.py
tests/: conftest.py  test.py  test_hosting.py  test_manager.py  test_upload_hosting.py
tests/source_code_hosting/: script.js
tests/static_site/: index.html  styles.css
