[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-manage-nginx"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Trương Hải Đăng", email = "haidanghth910@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/TruongHaiDang/py-manage-nginx#readme"
Issues = "https://github.com/TruongHaiDang/py-manage-nginx/issues"
Source = "https://github.com/TruongHaiDang/py-manage-nginx"

[tool.hatch.version]
path = "src/py-manage-nginx/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/py-manage-nginx tests}"

[tool.coverage.run]
source_pkgs = ["py-manage-nginx", "tests"]
branch = true
parallel = true
omit = [
  "src/py-manage-nginx/__about__.py",
]

[tool.coverage.paths]
py-manage-nginx = ["src/py-manage-nginx", "*/py-manage-nginx/src/py-manage-nginx"]
tests = ["tests", "*/py-manage-nginx/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
